<resources>
    <string name="app_name">Quizz</string>
    <string name="Q1">Ques1:In which City Eifel Tower Situated?</string>
    <string name="Q2">Ques2:In which country Taj Mahal Situated?</string>
    <string name="Q3">Ques3:In which country Statue of Liberty Situated?</string>
    <string name="Q4">Ques4:In which country Niagra falls Situated?</string>
    <string name="Q5">Ques5:In which City Amber fort Situated?</string>
</resources>
